@@ -204,17 +204,6 @@ public:
         String target = "GET / HTTP/1.1";
         Bytes b((char*)target.c_str(),8);
         proto.os().write(b);
-        /*
-        String target = getSpecifierName();
-        Bytes b((char*)target.c_str(),8);
-        proto.os().write(b);
-        String from = proto.getRoute().getFromName();
-        Bytes b2((char*)from.c_str(),from.length());
-        proto.os().write(b2);
-        proto.os().write('\r');
-        proto.os().write('\n');
-        proto.os().flush();
-        */
         return true;
 
     }
