@@ -1,3 +1,10 @@
+2009-10-28  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
+
+	* src/libYARP_OS/include/yarp/os/impl/Protocol.h: propagate
+	carrier modifiers.  Carrier modifiers are not used yet,
+	but will be convenient for accessing variants of standard
+	port output.
+
 2009-10-28  Arjan Gijsberts  <arjan@liralab.it>
 	* src/libYARP_OS/src/BottleImpl.cpp
 	* src/libYARP_sig/src/Vector.cpp
